TEST: More slow marks, add veryslow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -160,13 +160,14 @@ per-file-ignores = [
 
 [tool.pytest.ini_options]
 norecursedirs = [".git"]
-addopts = "-svx --doctest-modules"
+addopts = "-svx --doctest-modules --strict-markers"
 doctest_optionflags = "ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS"
 env = "PYTHONHASHSEED=0"
 filterwarnings = ["ignore::DeprecationWarning"]
 junit_family = "xunit2"
 markers = [
   "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+  "veryslow: marks tests as very slow (>5min)",
 ]
 
 
