CI: Run slow and veryslow on two separate jobs

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -37,9 +37,9 @@ jobs:
         marks: ["not slow"]
         include:
           - python-version: "3.9"
-            marks: "slow"
+            marks: "slow and not veryslow"
           - python-version: "3.12"
-            marks: "slow"
+            marks: "veryslow"
 
     steps:
     - uses: actions/cache@v4
