--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -5,6 +5,12 @@ on:
   pull_request:
   schedule:
     - cron: 0 0 * * 0
+  # Allow job to be triggered manually from GitHub interface
+  workflow_dispatch:
+
+# Force pytest to use color
+env:
+  FORCE_COLOR: true
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -18,7 +24,7 @@ defaults:
     shell: bash -el {0}
 
 jobs:
-  build-linux:
+  test:
     if: "!contains(github.event.head_commit.message, '[skip ci]' && (github.event_name == 'push' || github.event.pull_request.head.repo.full_name != 'nipreps/sdcflows'))"
     runs-on: ubuntu-latest
     env:
