Test both types of annotation.

--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -187,7 +187,7 @@ jobs:
         # ds005250
         datalad install -r https://github.com/nipreps-data/ds005250.git
         datalad update -r --merge -d ds005250/
-        datalad get -r -J 2 -d ds005250/ ds005250/sub-04/ses-2/
+        datalad get -r -J 2 -d ds005250/ ds005250/
 
     - name: Set FreeSurfer variables
       run: |
