--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
 license = "Apache-2.0"
 requires-python = ">=3.9"
 dependencies = [
+    "acres >= 0.2.0",
     "attrs >= 20.1.0",
     "nibabel >=3.1.0",
     "nipype >=1.8.5,<2.0",
