--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,9 @@ requires =
   tox>=4
   tox-uv
 envlist =
-  py3{9,10,11,12,13}-latest
-  py39-min
-  py3{11,12,13}-pre
+  py3{9,10,11,12,13}-latest-{fast,slow,veryslow}
+  py39-min-fast
+  py3{11,12,13}-pre-{fast,slow,veryslow}
   style
   spellcheck
 skip_missing_interpreters = true
@@ -24,6 +24,11 @@ DEPENDS =
   min: min
   latest: latest
   pre: pre
+
+MARKS =
+  fast: fast
+  slow: slow
+  veryslow: veryslow
 
 [testenv]
 description = Pytest with coverage
@@ -68,7 +73,11 @@ uv_resolution =
   min: lowest-direct
 
 commands =
-  pytest --durations=20 --durations-min=1.0 --cov-report term-missing {posargs:-n auto}
+  pytest --durations=20 --durations-min=1.0 --cov-report term-missing \
+  fast: -m "not slow" \
+  slow: -m "slow and not veryslow" \
+  veryslow: -m "veryslow" \
+  {posargs:-n auto}
 
 [testenv:style]
 description = Check our style guide
