chore(tox): Pass in variables set by CI

--- a/tox.ini
+++ b/tox.ini
@@ -41,6 +41,15 @@ pass_env =
   FREESURFER_HOME
   SUBJECTS_DIR
   FS_LICENSE
+  # FSL
+  FSLOUTPUTTYPE
+  FSLMULTIFILEQUIT
+  # AFNI
+  AFNI_HOME
+  AFNI_MODELPATH
+  AFNI_IMSAVE_WARNINGS
+  AFNI_TTATLAS_DATASET
+  AFNI_PLUGINPATH
   # CI variables
   TEST_DATA_HOME
   TEST_OUTPUT_DIR
