--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -67,6 +67,11 @@ jobs:
           - python-version: "3.12"
             dependencies: "latest"
             marks: "veryslow"
+        exclude:
+          - python-version: "3.9"
+            dependencies: "pre"
+          - python-version: "3.10"
+            dependencies: "pre"
 
     steps:
     - uses: actions/cache@v4
